fixed broken image links

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <hr /><br>
     <table>
       <tr>
-        <th><a href='/root/'><img src="/img/disk.ico" alt="HDD" height="16" width="16"> Files</a></th>
-        <th><a id="osjs" target="_blank"><img src="/img/osjs.png" alt="OS.js" height="16" width="16"> OS.js</a></th>
+        <th><a href='/root/'><img src="img/disk.ico" alt="HDD" height="16" width="16"> Files</a></th>
+        <th><a id="osjs" target="_blank"><img src="img/osjs.png" alt="OS.js" height="16" width="16"> OS.js</a></th>
       </tr>
     </table>
     <br>
