changed redirects to github mirror so it works in both places and I'm lazy so I didn't do it through coding.

--- a/fly/index.html
+++ b/fly/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="robots" content="noindex">
 <head>
-  <meta http-equiv="refresh" content="0;URL='/root/altvr/fly'" />
+  <meta http-equiv="refresh" content="0;URL='https://lunartiger.github.io/fs-mirror/root/altvr/fly'" />
   <meta name="description" content="redirect">
   <title>Fly</title>
 </head>
