changed bd to link to releases page

--- a/root/windows-apps/index.html
+++ b/root/windows-apps/index.html
@@ -32,13 +32,13 @@
 			<tr>
 				<th id='battoexe'><a href='QBFC.7z'>Quick Batch File Compiler</a></th>
 			</tr>
-			<tr>
-				<th id='betterdiscord'><a href='BandagedBD_Windows.exe'>BeterDiscord</a></th>
-			</tr>
 		</table>
 		<br>
 		<h3>Links:</h3>
 		<table>
+			<tr>
+				<th id='betterdiscord'><a href='https://github.com/rauenzi/BetterDiscordApp/releases'>BeterDiscord</a></th>
+			</tr>
 			<tr>
 				<th id='treeseze'><a href='https://www.jam-software.com/treesize_free/' target='_blank'>TreeSize</a></th>
 			</tr>
