--- a/root/index.html
+++ b/root/index.html
@@ -55,6 +55,11 @@
 		<hr style="height:50px; visibility:hidden;" />
 	</body>
 	<footer>
-		<p><a href="/">Home</a></p>
+		<p><a id='home' href="/">Home</a></p>
 	</footer>
+	<script>
+    if (window.location.origin = 'lunartiger.github.io') {
+      document.getElementById('home').href='/fs-mirror';
+    }
+  </script>
 </html>
