--- a/root/index.html
+++ b/root/index.html
@@ -58,8 +58,8 @@
 		<p><a id='home' href="/">Home</a></p>
 	</footer>
 	<script>
-    if (window.location.origin = 'lunartiger.github.io') {
-      document.getElementById('home').href='/fs-mirror';
-    }
-  </script>
+		if (window.location.origin == 'lunartiger.github.io') {
+			document.getElementById('home').href='/fs-mirror';
+		}
+</script>
 </html>
