should do the thing correctly

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </table>
   </body>
   <script type="text/javascript">
-    if (window.location.origin !== 'lunartiger.github.io') {
+    if (window.location.origin !== 'http://lunartiger.github.io') {
       document.getElementById('osjs').href=window.location.origin+':8000';
     }
   </script>
