links fix themselves

--- a/root/android-apps/index.html
+++ b/root/android-apps/index.html
@@ -42,7 +42,7 @@
 		<p><a id='home' href="/">Home</a>&nbsp;/&nbsp;<a id='root' href="/root">Root</a></p>
 	</footer>
 	<script>
-		if (window.location.origin == 'lunartiger.github.io') {
+		if (window.location.origin == 'https://lunartiger.github.io') {
 			document.getElementById('home').href='/fs-mirror';
 			document.getElementById('root').href='/fs-mirror/root'
 		}
