--- a/root/index.html
+++ b/root/index.html
@@ -58,7 +58,7 @@
 		<p><a id='home' href="/">Home</a></p>
 	</footer>
 	<script>
-		if (window.location.origin == 'lunartiger.github.io') {
+		if (window.location.origin == 'https://lunartiger.github.io') {
 			document.getElementById('home').href='/fs-mirror';
 		}
 </script>
