--- a/root/grocery-list/index.html
+++ b/root/grocery-list/index.html
@@ -18,48 +18,58 @@
 			table {border: 5px solid #00be00;margin-left:auto;margin-right:auto;}
 			th {padding: 10px;border: 4px solid #00be00;text-align:center}
 			hr {border-top: 1px dashed #006900;border-bottom: 0;border-left: 0;border-right: 0;}
+			div {display: inline-block;}
+			/*coustom scrollbar*/
+			/* width */
+			::-webkit-scrollbar {
+				width: 10px;
+			}
+
+			/* Track */
+			::-webkit-scrollbar-track {
+				background: transparent; 
+			}
+
+			/* Handle */
+			::-webkit-scrollbar-thumb {
+				background: #0f0; 
+				border-radius: 10px;
+			}
+
+			/* Handle on hover */
+			::-webkit-scrollbar-thumb:hover {
+				background: #009900; 
+			}
+
+			/*corner where the scrollbars meet*/
+			::-webkit-scrollbar-corner {
+				background: transparent;
+			}
 		</style>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Lunar's File Server</title>
-		<meta name="Root" content="Root">
+		<meta name="Grocery List" content="Grocery List">
 	</head>
 	<body>
-		<h1 id='top'>Root</h1>
-		<hr /><br>
-		<h3 if='folders'>Folders:</h3>
-		<table>
-			<tr>
-				<th id='altvr'><a href='altvr'>Altspace SDK Apps</a></th>
-			</tr>
-			<tr>
-				<th id='android-apps'><a href='android-apps'>Android Apps</a></th>
-			</tr>
-			<tr>
-				<th id='emojis'><a href='emojis'>Emojis</a></th>
-			</tr>
-			<tr>
-				<th id='watch-faces'><a href='watch-faces'>Watch Faces</a></th>
-			</tr>
-			<tr>
-				<th id='watch-faces'><a href='windows-apps'>Windows Apps</a></th>
-			</tr>
-		</table>
-		<br>
-		<h3 id='files'>Files:</h3>
-		<table>
-			<tr>
-				<th id='groceries'><a href='grocery-list'>Grocery List</a></th>
-			</tr>
-		</table>
-		<hr style="height:50px; visibility:hidden;" />
+		<div id='rawfile' style="max-width:100%;max-height:95%;height:900px;width:705px;border: 4px solid #006900;margin: auto;">
+			<pre id="thePre" style="text-align:left; background:transparent; color: green;max-width:100%;max-height:100%;border: 0;"></pre>
+		</div>
 	</body>
+	<script>
+		fetch('grocery-list.txt')
+		.then(body=>body.text())
+		.then(body=>{
+			document.getElementById('thePre').innerText = body;
+		})
+	</script>
 	<footer>
-		<p><a id='home' href="/">Home</a></p>
+		<p><a id='home' href="/">Home</a>&nbsp;/&nbsp;<a id='root' href="/root">Root</a></p>
 	</footer>
 	<script>
 		if (window.location.origin == 'https://lunartiger.github.io') {
 			document.getElementById('home').href='/fs-mirror';
+			document.getElementById('root').href='/fs-mirror/root'
 		}
 	</script>
 </html>
