--- a/root/windows-apps/index.html
+++ b/root/windows-apps/index.html
@@ -40,6 +40,9 @@
 				<th id='betterdiscord'><a href='https://github.com/rauenzi/BetterDiscordApp/releases'>BeterDiscord</a></th>
 			</tr>
 			<tr>
+				<th id='luamacros'><a href='http://www.hidmacros.eu/luamacros.zip' target='_blank'>LuaMacros</a></th>
+			</tr>
+			<tr>
 				<th id='treeseze'><a href='https://www.jam-software.com/treesize_free/' target='_blank'>TreeSize</a></th>
 			</tr>
 			<tr>
