--- a/root/windows-apps/index.html
+++ b/root/windows-apps/index.html
@@ -30,6 +30,9 @@
 		<h3>Direct Downloads:</h3>
 		<table>
 			<tr>
+				<th id='emulator'><a href='NES-Emulator-and-758-Roms.7z'>NES Emulator and 758 Roms</a></th>
+			</tr>
+			<tr>
 				<th id='battoexe'><a href='QBFC.7z'>Quick Batch File Compiler</a></th>
 			</tr>
 		</table>
