--- a/root/emojis/index.html
+++ b/root/emojis/index.html
@@ -66,6 +66,15 @@
 				<th id='sexychicken'><a href='SexyChicken.png'><img src="SexyChicken.png" alt="Sexy Chicken" style="width:128px;"><br>Sexy Chicken</a></th>
 			</tr>
 			<tr>
+				<th id='spyro'><a href='spyro.png'><img src="spyro.png" alt="Spyro" style="width:128px;"><br>Spyro</a></th>
+			</tr>
+			<tr>
+				<th id='spyrolove'><a href='spyrolove.png'><img src="spyrolove.png" alt="Spyro Love" style="width:128px;"><br>Spyro Love</a></th>
+			</tr>
+			<tr>
+				<th id='stonedsmile'><a href='stonedsmile.png'><img src="stonedsmile.png" alt="Stoned Smile" style="width:128px;"><br>Stoned Smile</a></th>
+			</tr>
+			<tr>
 				<th id='vampire'><a href='vampire.png'><img src="vampire.png" alt="Vampire" style="width:auto;"><br>Vampire</a></th>
 			</tr>
 			<tr>
