--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       body {text-align:center;background-color: #000000;color: #00ff00;font-family: ComicSans;}
       footer {position: fixed;left: 0;bottom: 0;width: 100%;background-color: #000000;color: #00ff00;border-top: 1px dashed #006900;}
       button {background-color: #000000;color: #00FF00;padding: 10px;border-radius: 10px;}
+      a {color: #00ff00;text-decoration:none;}
       a:link {color: #00ff00;text-decoration:none;}
       a:visited {color: #00ff00;text-decoration:none;}
       a:hover {color: #00bf00;text-decoration:none;}
