--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <hr style="width:50%" />
     <table>
       <tr>
-        <th><a href='https://lunartiger.github.io/projects'>Lunar's Homepage</a></th>
-        <th><a href='https://lunartiger.github.io/althub'>Altspace Teleport Hub</a></th>
+        <th><a href='https://lunartiger.github.io/'>Lunar's Homepage</a></th>
+        <th><a href='https://lunartiger.github.io/projects'>Lunar's Projects</a></th>
       </tr>
     </table>
   </body>
