--- a/root/emojis/index.html
+++ b/root/emojis/index.html
@@ -30,58 +30,61 @@
 		<h3>Files:</h3>
 		<table>
 			<tr>
-				<th id='1up'><a href='1up.png'><img src="1up.png" alt="1 up" style="width:auto;"><br>1 UP</a></th>
+				<th id='1up'><a href='1up.png'><img src="1up.png" alt="1 up mushroom from the popular game Mario" style="width:auto;"><br>1 UP</a></th>
 			</tr>
 			<tr>
-				<th id='aliens'><a href='aliens.png'><img src="aliens.png" alt="Aliens" style="width:auto;"><br>Aliens</a></th>
+				<th id='aliens'><a href='ahemtoo.png'><img src="ahemtoo.png" alt="&quot;*too&quot; surrounded in a field of green with a lighter green border" style="width:auto;"><br>*too</a></th>
 			</tr>
 			<tr>
-				<th id='axolotl'><a href='axolotl.png'><img src="axolotl.png" alt="Axolotl" style="width:auto;"><br>Axolotl</a></th>
+				<th id='aliens'><a href='aliens.png'><img src="aliens.png" alt="Guy from Ancient Aliens with hands apart and wild hair. At the bottom is the word &quot;Aliens&quot; in white text." style="width:auto;"><br>Aliens</a></th>
 			</tr>
 			<tr>
-				<th id='delicious'><a href='delicious.png'><img src="delicious.png" alt="Delicious" style="width:auto;"><br>Delicious</a></th>
+				<th id='axolotl'><a href='axolotl.png'><img src="axolotl.png" alt="Axolotl head with a cute face." style="width:auto;"><br>Axolotl</a></th>
 			</tr>
 			<tr>
-				<th id='facepalm'><a href='facepalm.png'><img src="facepalm.png" alt="Facepalm" style="width:auto;"><br>Facepalm</a></th>
+				<th id='delicious'><a href='delicious.png'><img src="delicious.png" alt="A delicious marshmallow." style="width:auto;"><br>Delicious</a></th>
 			</tr>
 			<tr>
-				<th id='google'><a href='Google.png'><img src="Google.png" alt="Google" style="width:auto;"><br>Google</a></th>
+				<th id='facepalm'><a href='facepalm.png'><img src="facepalm.png" alt="Captain Picard, from Star Trek, doing a facepalm." style="width:auto;"><br>Facepalm</a></th>
 			</tr>
 			<tr>
-				<th id='herbert'><a href='herbert.png'><img src="herbert.png" alt="Herbert" style="width:auto;"><br>Herbert</a></th>
+				<th id='google'><a href='Google.png'><img src="Google.png" alt="The Google logo" style="width:auto;"><br>Google</a></th>
 			</tr>
 			<tr>
-				<th id='jason'><a href='Jason.png'><img src="Jason.png" alt="Jason" style="width:auto;"><br>Jason</a></th>
+				<th id='herbert'><a href='herbert.png'><img src="herbert.png" alt="Herbert the Pervert from Family Guy" style="width:auto;"><br>Herbert</a></th>
 			</tr>
 			<tr>
-				<th id='morty'><a href='Morty.png'><img src="Morty.png" alt="Morty" style="width:auto;"><br>Morty</a></th>
+				<th id='jason'><a href='Jason.png'><img src="Jason.png" alt="A cute Jason mask." style="width:auto;"><br>Jason</a></th>
 			</tr>
 			<tr>
-				<th id='plumbus'><a href='plumbus.jpg'><img src="plumbus.jpg" alt="Plumbus" style="width:auto;"><br>Plumbus</a></th>
+				<th id='morty'><a href='Morty.png'><img src="Morty.png" alt="Morty from Rick and Morty." style="width:auto;"><br>Morty</a></th>
 			</tr>
 			<tr>
-				<th id='rick'><a href='Rick.png'><img src="Rick.png" alt="Rick" style="width:auto;"><br>Rick</a></th>
+				<th id='plumbus'><a href='plumbus.jpg'><img src="plumbus.jpg" alt="A plumbus. It has many uses around the house and no home should be without one." style="width:auto;"><br>Plumbus</a></th>
 			</tr>
 			<tr>
-				<th id='sexychicken'><a href='SexyChicken.png'><img src="SexyChicken.png" alt="Sexy Chicken" style="width:128px;"><br>Sexy Chicken</a></th>
+				<th id='rick'><a href='Rick.png'><img src="Rick.png" alt="Rick from Rick and Morty." style="width:auto;"><br>Rick</a></th>
 			</tr>
 			<tr>
-				<th id='spyro'><a href='spyro.png'><img src="spyro.png" alt="Spyro" style="width:128px;"><br>Spyro</a></th>
+				<th id='sexychicken'><a href='SexyChicken.png'><img src="SexyChicken.png" alt="A plucked chicken in a sexy pose. Legs crossed, laying on side with &quot;hand&quot; on hip." style="width:128px;"><br>Sexy Chicken</a></th>
 			</tr>
 			<tr>
-				<th id='spyrolove'><a href='spyrolove.png'><img src="spyrolove.png" alt="Spyro Love" style="width:128px;"><br>Spyro Love</a></th>
+				<th id='spyro'><a href='spyro.png'><img src="spyro.png" alt="Spyro, from Spyro." style="width:128px;"><br>Spyro</a></th>
 			</tr>
 			<tr>
-				<th id='stonedsmile'><a href='stonedsmile.png'><img src="stonedsmile.png" alt="Stoned Smile" style="width:128px;"><br>Stoned Smile</a></th>
+				<th id='spyrolove'><a href='spyrolove.png'><img src="spyrolove.png" alt="Spyro, from Spyro, with heart eyes." style="width:128px;"><br>Spyro Love</a></th>
 			</tr>
 			<tr>
-				<th id='vampire'><a href='vampire.png'><img src="vampire.png" alt="Vampire" style="width:auto;"><br>Vampire</a></th>
+				<th id='stonedsmile'><a href='stonedsmile.png'><img src="stonedsmile.png" alt="An emoji face with mostly closed, bloodshot eyes and a big :D smile." style="width:128px;"><br>Stoned Smile</a></th>
 			</tr>
 			<tr>
-				<th id='worm'><a href='worm.png'><img src="worm.png" alt="Worm" style="width:auto;"><br>Worm</a></th>
+				<th id='vampire'><a href='vampire.png'><img src="vampire.png" alt="A cute vampire" style="width:auto;"><br>Vampire</a></th>
 			</tr>
 			<tr>
-				<th id='zombie'><a href='zombie.png'><img src="zombie.png" alt="Zombie" style="width:auto;"><br>Zombie</a></th>
+				<th id='worm'><a href='worm.png'><img src="worm.png" alt="An awesome worm. Worms are amazing and everyone should have them." style="width:auto;"><br>Worm</a></th>
+			</tr>
+			<tr>
+				<th id='zombie'><a href='zombie.png'><img src="zombie.png" alt="A cute zombie." style="width:auto;"><br>Zombie</a></th>
 			</tr>
 		</table>
 		<hr style="height:50px; visibility:hidden;" />
