--- a/root/index.html
+++ b/root/index.html
@@ -2,6 +2,15 @@
 	<head>
 		<meta name="robots" content="noindex">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="/favicon.js"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=RyQA5rLO48">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=RyQA5rLO48">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=RyQA5rLO48">
+		<link rel="manifest" href="/site.webmanifest?v=RyQA5rLO48">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg?v=RyQA5rLO48" color="#006900">
+		<link rel="shortcut icon" href="/favicon.ico?v=RyQA5rLO48">
+		<meta name="msapplication-TileColor" content="#00a300">
+		<meta name="theme-color" content="#006900">
 		<style>
 			@font-face {font-family: ComicSans;src: url(/comic.ttf);}
 			body {text-align:center;background-color: #000000;color: #00ff00;font-family: ComicSans;}
