--- a/404.html
+++ b/404.html
@@ -17,6 +17,7 @@
 			th {padding: 10px;border: 4px solid #006900;text-align:center}
 			hr {border-top: 1px dashed #006900;border-bottom: 0;border-left: 0;border-right: 0;}
 		</style>
+		<script src="/favicon.js"></script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Lunar's File Server</title>
