--- a/root/emojis/index.html
+++ b/root/emojis/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta name="robots" content="noindex">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="/favicon.js"></script>
 		<style>
 			@font-face {font-family: ComicSans;src: url(/comic.ttf);}
 			body {text-align:center;background-color: #000000;color: #00ff00;font-family: ComicSans;}
