--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
   <body>
     <h1>Welcome to Lunar's<br>File Server</h1>
     <hr /><br>
+    <p>I'm currently working on a redesign of this site. Please excuse the mess and possible broken links while this process is undertaken.</p>
     <table>
       <tr>
         <th><a href='root'><img src="img/disk.ico" alt="HDD" height="16" width="16"> Files</a></th>
-        <th><a id="osjs" target="_blank"><img src="img/osjs.png" alt="OS.js" height="16" width="16"> OS.js</a></th>
       </tr>
     </table>
     <br>
-    <p>In order to get an account on OS.js,<br>please contact me <a href='https://lunartiger.github.io/contact' style='text-decoration:underline;'>here</a></p>
-    <hr style="height:100px; visibility:hidden;" />
     <hr style="width:50%" />
     <table>
       <tr>
@@ -48,11 +46,13 @@
       </tr>
     </table>
   </body>
+  <!--
   <script type="text/javascript">
     if (window.location.origin !== 'https://lunartiger.github.io') {
       document.getElementById('osjs').href=window.location.origin+':8000';
     }
   </script>
+  <!-- -->
   <footer>
     <p style="text-align:center">Nobody exists on purpose,<br>nobody belongs anywhere,<br>everybody is going to die.</p>
   </footer>
